(Issue 3572) Align lhnav toggle with discussion / content profile

--- a/shared/oae/css/oae.components.css
+++ b/shared/oae/css/oae.components.css
@@ -1276,56 +1276,17 @@ ul.oae-list > li:first-child .oae-listitem {
  * The list options can be shown at the top of a list, providing a title for the list, as well
  * as possibly a list search form, list actions, view mode switching, etc.
  *
- * Some example HTML for a list options view:
+ * The HTML for list options has been abstracted into a globally available TrimPath template
+ * that can be used when rendering list view items:
  *
- *  <div class="oae-list-options">
- *      <div class="row">
- *          <button class="btn col-xs-12 col-sm-6 oae-list-options-toggle">
- *              <h2 class="pull-left">__MSG__LIBRARY__ <i class="icon-caret-down"></i></h2>
- *          </button>
- *          <div class="pull-right col-xs-12 col-sm-6">
- *              <form id="library-search-form" class="form-search" role="search">
- *                  <label class="control-label oae-aural-text" for="library-search-query">__MSG__NARROW_BY_KEYWORD__</label>
- *                  <input type="text" id="library-search-query" class="form-control pull-right search-query" placeholder="__MSG__NARROW_BY_KEYWORD__"/>
- *              </form>
- *          </div>
- *      </div>
- *      <div class="oae-list-options-actions hide">
- *          <input type="checkbox" id="library-selectall" class="oae-list-selectall" />
- *          <label for="library-selectall" class="oae-aural-text">__MSG__SELECT_ALL__</label>
- *          <button type="button" class="btn" disabled="disabled"><i class="icon-share pull-left"></i>__MSG__SHARE__</button>
- *          <button type="button" class="btn" disabled="disabled"><i class="icon-remove pull-left"></i>__MSG__DELETE__</button>
- *          <div class="btn-group pull-right">
- *              <button class="btn" data-type="oae-list-compact">
- *                  <i class="icon-list"></i>
- *                  <span class="oae-aural-text">__MSG__LIST_VIEW__</span>
- *              </button>
- *              <button class="btn" data-type="oae-list-details">
- *                  <i class="icon-th-list"></i>
- *                  <span class="oae-aural-text">__MSG__EXPANDED_LIST_VIEW__</span>
- *              </button>
- *              <button class="btn active" data-type="oae-list-grid">
- *                  <i class="icon-th-large"></i>
- *                  <span class="oae-aural-text">__MSG__GRID_VIEW__</span>
- *              </button>
- *          </div>
- *      </div>
- *  </div>
+ *   `${listOptionsHeader(title, showSearch, actions, showViewOptions, showBadge)}`
  *
- * Notes:
+ * An explanation of the parameters for the list options header macro can be found in
+ * `shared/oae/macros/list.html`.
  *
- * - The `oae-list-options-toggle` item is used to show the title of the list, and will also be used to toggle
- *   the actions bar. This will be enabled automatically by the system. If a list needs to be shown in view-only
- *   mode, this element should be set to disabled, in which case the dropdown icon will disappear and the toggle
- *   will no longer work.
- * - The `oae-list-options-actions` div represents the action bar that will be toggled when the `oae-list-options-toggle`
- *   element is clicked. This bar contains all of the action that can be done on the selected list items, and
- *   can basically be anything.
- * - An `oae-list-selectall` class can be applied to the element that should be used to select/deselect all list
- *   items. This will be enabled automatically by the system. If the list options have any buttons that require the collection
- *   of all selected items, the list options and the list should be wrapped in a `oae-list-container` div.
- * - The primary actions under `oae-list-options-actions` should be disabled by default, as they can only be clicked
- *   when at least one of the items in the corresponding list is checked.
+ * The output of this macro represents all that is needed to render the list options template
+ * on a page. To enable the user interactions of the template it is necessary to include the
+ * `shared/oae/js/jquery-plugins/jquery.list-options.js` module on the page as well.
  */
 
 .oae-list-options {
